--- a/index.html
+++ b/index.html
@@ -427,7 +427,50 @@
             <a href="/" class="team_button">See all team</a>
         </section>
         <section class="testimonials _container">
-
+            <div class="testimonials_description">
+                <h2>Testimonials</h2>
+                <p>Hear from Our Satisfied Clients: Read Our Testimonials <br> to Learn More about Our Digital Marketing Services</p>
+            </div>
+            <div class="testimonials_slider">
+                <img src="images/slider.png" alt="">
+            </div>
+        </section>
+        <section class="contactus _container">
+            <div class="contactus_description">
+                <h2>Contact Us</h2>
+                <p>Connect with Us: Let's Discuss Your <br> Digital Marketing Needs</p>
+            </div>
+            <div class="contactus_form">
+                <fieldset class="contactus_fieldset">
+                    <div class="form_radio">
+                        <div>
+                            <input type="radio" id="sayhi" checked/>
+                            <label for="sayhi">Say Hi</label>
+                        </div>
+                        <div>
+                            <input type="radio" id="gaq"/>
+                            <label for="gaq">Get a Quote</label>
+                        </div>
+                    </div>
+                    <div class="form_inputs">
+                        <div>
+                            <label for="name">Name</label>
+                            <input type="text" id="name" placeholder="Name" size="10"/>
+                        </div>
+                        <div>
+                            <label for="email">Email*</label>
+                            <input type="email" id="email" placeholder="Email" size="10"/>
+                        </div>
+                        <div>
+                            <label for="message">Message*</label>
+                            <input type="text" id="message" placeholder="Message" size="10"/>
+                        </div>
+                    </div>
+                    <div>
+                        <button class="form_button">Send Message</button>
+                    </div>
+                </fieldset>
+            </div>
         </section>
     </main>
 </body>
