desktop version done

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Landing</title>
+    <title>Positivus Landing</title>
     <link rel="stylesheet" href="styles/index.css">
     <script src="js/index.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
